# cloud-hypervisor

./: Cargo.toml
.github/workflows/: build.yaml  ci.yaml  docker-image.yaml  quality.yaml
arch/src/x86_64/: mod.rs
block/: Cargo.toml
block/src/: lib.rs  qcow_sync.rs  raw_async.rs  raw_sync.rs
block/src/engine/: aio.rs  io_uring.rs  mod.rs  tracker.rs  wrapper.rs
block/src/io/: request.rs
block/src/io/async_io/: aio_data_io.rs  async_io_core.rs  uring_data_io.rs
block/src/qcow/: mod.rs  qcow_raw_file.rs  raw_file.rs  refcount.rs  vec_cache.rs
cloud-hypervisor/: Cargo.toml
cloud-hypervisor/tests/: integration.rs
cloud-hypervisor/tests/common/: utils.rs
devices/: Cargo.toml
docs/man/: cloud-hypervisor.1
docs/rfcs/: block-refactoring-async-early.md  block-refactoring.md
fuzz/: Cargo.toml
hypervisor/src/: cpu.rs  hypervisor.rs  lib.rs
otel/: Cargo.toml
otel/src/: lib.rs  tracer.rs
performance-metrics/src/: main.rs
resources/: Dockerfile
scripts/: dev_cli.sh  run_integration_tests.sh  run_unit_tests.sh
src/: main.rs
vmm/: Cargo.toml
vmm/src/: acpi.rs  cpu.rs  device_manager.rs  lib.rs  vm.rs
vmm/src/api/openapi/: cloud-hypervisor.yaml
