[package]
name = "otel"
version = "0.1.0"
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
log = "0.4.20"
opentelemetry = { version = "0.24.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.17.0", features = ["trace", "http", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.24.1", default-features = false, features = ["trace", "http"] }
opentelemetry-semantic-conventions = "0.16.0"

[features]
otel = []
